users login is operational

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Test Landing<h1>
-
-<%= link_to 'Sign UP', new_user_path %>
-<%= link_to 'Sign IN', new_user_path %>
+<p>
+  <%= link_to 'Sign UP', new_user_path %>
+  <%= link_to 'Log IN', new_sessions_path %>
+</p>
