--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Hello User</h1>
-<%= link_to 'index', root_url %>
+<h1><%= ["Hello!", "Aloha!", "Salam!", "Bonjour!", "Bonjourno!", "Shalom!", "Ola!"].sample.upcase %> <%= @user.first_name.upcase + ' ' + @user.last_name.upcase %></h1>
+
+
+
+<%= link_to 'Edit', edit_user_path %> || <%= link_to 'Back', root_url %> || <%= link_to 'Delete', user_path, method: :delete %>
