--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,6 +16,11 @@
   </p>
 
   <p>
+    <%= f.label :role %><br>
+    <%= f.text_field :role %>
+  </p>
+
+  <p>
     <%= f.label :password %><br>
     <%= f.password_field :password %>
   </p>
