--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,6 @@
   <p>
     <%= link_to 'Edit', edit_user_path %> || <%= link_to 'Back', root_url %> || <%= link_to 'Delete', user_path, method: :delete %>
     <%= link_to 'Create Session', new_user_class_session_path(@user.id) %>
+    <%= link_to 'See All Sessions', user_class_sessions_path(@user.id) %>
   </p>
 <% end %>
