re-worked models, and associations, re-configured routes for better readability and logic, instructors now create classrooms, and then create sessions.  Students can still enter sessions, simple comments features is built out, currently working on limiting users views on Class Sessions Show view

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,8 +17,9 @@
 
   <p>
     <%= f.label :role %><br>
-    <%= f.text_field :role %>
+    <%= f.select :role, ['instructor', 'student']%>
   </p>
+
 
   <p>
     <%= f.label :password %><br>
