--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,11 @@
-<h1>Test Landing<h1>
-<p>
-  <%= link_to 'Sign UP', new_user_path %>
-  <%= link_to 'Log IN', new_sessions_path %>
-</p>
+<h1>Welcome to OneVoice Community<h1>
+
+<% if @user %>
+  <h2>You are logged in</h2>
+  <%= link_to 'Back to your profile', user_path(@user.id) %>
+<% else %>
+  <p>
+    <%= link_to 'Sign Up', new_user_path %>
+    <%= link_to 'Log In', new_sessions_path %>
+  </p>
+<% end %>
