Landing page and login/signup, semi-working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,11 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= javascript_include_tag('application.js') %>
+
   </head>
 
 
@@ -16,6 +20,8 @@
           <li><%= link_to "Logout", sessions_path, method: :delete %></li>
         </ul>
       <% end %>
+
     <%= yield %>
+
   </body>
 </html>
