--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,184 @@
  *= require_tree .
  *= require_self
  */
+
+ html,
+ button,
+ input,
+ select,
+ textarea {
+     color: #222;
+ }
+
+ body {
+     font-size: 1em;
+ }
+
+ ::-moz-selection {
+     background: #b3d4fc;
+     text-shadow: none;
+ }
+
+ ::selection {
+     background: #b3d4fc;
+     text-shadow: none;
+ }
+
+ fieldset {
+     border: 0;
+     margin: 0;
+     padding: 0;
+ }
+
+ textarea {
+     resize: vertical;
+ }
+
+ .chromeframe {
+     margin: 0.2em 0;
+     background: #ccc;
+     color: #000;
+     padding: 0.2em 0;
+ }
+
+ /* ==========================================================================
+    Helper classes
+    ========================================================================== */
+
+ .clearfix:before,
+ .clearfix:after {
+     content: " ";
+     display: table;
+ }
+
+ .clearfix:after {
+     clear: both;
+ }
+
+ .clearfix {
+     *zoom: 1;
+ }
+
+ /* ==========================================================================
+    Author's custom styles ---> START YOUR STYLING BELOW
+    ========================================================================== */
+
+ html {
+   background: url("wallup.jpg"); /*no-repeat center center fixed;*/
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+ }
+
+ .hello {
+     font: 8em "Helvetica Neue";
+     color: #EEE;
+     text-shadow: 0.02em 0.02em 0 #333;
+     height: 1em;
+     width: 100%;
+     text-align: center;
+     position: absolute;
+     margin: auto;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+ }
+
+
+ button {
+     display: block;
+     border: none;
+     outline: none;
+     width: 8em;
+     height: 2em;
+     border-radius: 10px;
+     line-height: 2;
+     text-align: center;
+     font: 1em "Helvetica Neue";
+     background-color: skyblue;
+     color: black;
+     position: relative;
+     margin: auto;
+     margin-bottom: 10px;
+     top: 7em;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     -webkit-transition: all 200ms;
+     transition: all 200ms;
+ }
+
+ button.hover {
+     background-color: gray;
+     color: #666;
+ }
+
+ .modal {
+     display: none;
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(30,30,30,0.8);
+ }
+
+ .getstarted {
+     display: block;
+     width: 400px;
+     height: 18em;
+     padding: 2em;
+     background-color: #b9c2cc;
+     position: absolute;
+     margin: auto;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+ }
+
+ .getstarted>input {
+     display: block;
+     border: none;
+     outline: none;
+     padding: 0.5em;
+     font: 1.5em "Bebas Neue";
+     width: 100%;
+     margin: 1em 0;
+     color: #555;
+ }
+
+ .close {
+     display: block;
+     border: none;
+     outline: none;
+     width: 1em;
+     height: 1em;
+     font: 1.5em Arial;
+     background-color: #bc2a39;
+     color: #e7c0b9;
+     border-radius: 0.5em;
+     line-height: 0;
+
+     position: absolute;
+     top: 0.25em;
+     right: 0.25em;
+ }
+
+ button.submit {
+     display: block;
+     border: none;
+     outline: none;
+     width: 100%;
+     padding: 0.5em;
+     font: 1.5em "Bebas Neue";
+     margin: 1em 0;
+     background-color: #bab500;
+     color: #fcf6ce;
+ }
+
+ .getstarted>input.error {
+     outline: 2px solid #bc2a39;
+ }
