--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,20 @@
   <%= link_to 'Back to your profile', user_path(@user.id) %>
 <% else %>
   <p>
-    <%= link_to 'Sign Up', new_user_path %>
-    <%= link_to 'Log In', new_sessions_path %>
+    <%#= link_to 'Sign Up', new_user_path %>
+    <%#= link_to 'Log In', new_sessions_path %>
+
+    <button class="signin">Sign In</button>
+
+    <button class="signup">Sign Up</button>
+
+    <div class="modal" id="sign_in">
+      <%= new_sessions_path %>
+    </div>
+
+    <div class="modal" id="sign_up">
+      <%= new_user_path %>
+    </div>
+
   </p>
 <% end %>
