--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,32 +83,24 @@
    background-size: cover;
  }
 
- .hello {
-     font: 8em "Helvetica Neue";
-     color: #EEE;
-     text-shadow: 0.02em 0.02em 0 #333;
-     height: 1em;
-     width: 100%;
-     text-align: center;
-     position: absolute;
-     margin: auto;
-     top: 0;
-     bottom: 0;
-     left: 0;
-     right: 0;
+ h1 {
+   color: white;
+   text-align: center;
+   font-size: 2em;
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
-
 
  button {
      display: block;
      border: none;
      outline: none;
-     width: 8em;
+     width: 6em;
      height: 2em;
      border-radius: 10px;
      line-height: 2;
      text-align: center;
-     font: 1em "Helvetica Neue";
+     font-size: 0.9em;
+     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      background-color: skyblue;
      color: black;
      position: relative;
@@ -149,17 +141,6 @@
      bottom: 0;
      left: 0;
      right: 0;
- }
-
- .getstarted>input {
-     display: block;
-     border: none;
-     outline: none;
-     padding: 0.5em;
-     font: 1.5em "Bebas Neue";
-     width: 100%;
-     margin: 1em 0;
-     color: #555;
  }
 
  .close {
