--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,16 +8,16 @@
     <%#= link_to 'Sign Up', new_user_path %>
     <%#= link_to 'Log In', new_sessions_path %>
 
-    <button class="signin">Sign In</button>
+    <button class="signin">Log In</button>
 
     <button class="signup">Sign Up</button>
 
     <div class="modal" id="sign_in">
-      <%= new_sessions_path %>
+      <%= link_to "Sign In", new_sessions_path %>
     </div>
 
     <div class="modal" id="sign_up">
-      <%= new_user_path %>
+      <%= link_to "Sign Up", new_user_path %>
     </div>
 
   </p>
