Create Checkin controller and model, and edit the classroom and classsession views and controller to react when the user is student

--- a/app/views/class_rooms/index.html.erb
+++ b/app/views/class_rooms/index.html.erb
@@ -1,9 +1,15 @@
 <h1>Check Out Your Class Rooms</h1>
 
-<% @class_rooms.each do |c| %>
-Class: <%= c.subject %><br>Group Code: <%= c.group_code %><br>
-<%= link_to 'Create Session', new_user_class_room_class_session_path(params[:user_id], c.id) %>
-<%= link_to 'See All Sessions', user_class_room_class_sessions_path(params[:user_id], c.id) %>
-<br>
-<small><%= c.created_at.strftime("%A %B %d %Y") %></small><hr>
+<% if @user.role == 'instructor' %>
+  <% @class_rooms.each do |c| %>
+  Class: <%= c.subject %><br>Group Code: <%= c.group_code %><br>
+  <%= link_to 'Create Session', new_user_class_room_class_session_path(params[:user_id], c.id) %>
+  <%= link_to 'See All Sessions', user_class_room_class_sessions_path(params[:user_id], c.id) %>
+  <br>
+  <small><%= c.created_at.strftime("%A %B %d %Y") %></small><hr>
+  <% end %>
+<% else %>
+  <% @classrooms.each do |a| %>
+  <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %><br />
+  <% end %>
 <% end %>
