--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to OneVoice Community<h1>
 
-<% if @user %>
+<% if current_user %>
   <h2>You are logged in</h2>
   <%= link_to 'Back to your profile', user_path(@user.id) %>
 <% else %>
@@ -13,11 +13,11 @@
     <button class="signup">Sign Up</button>
 
     <div class="modal" id="sign_in">
-      <%= link_to "Sign In", new_sessions_path %>
+      <%= render "login_form" %>
     </div>
 
     <div class="modal" id="sign_up">
-      <%= link_to "Sign Up", new_user_path %>
+      <%= render "form" %>
     </div>
 
   </p>
