--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if current_user %>
   <h2>You are logged in</h2>
-  <%= link_to 'Back to your profile', user_path(@user.id) %>
+  <%= link_to 'Back to your profile', user_path(current_user.id) %>
 <% else %>
   <p>
     <%#= link_to 'Sign Up', new_user_path %>
