Centering and shadows for modals and buttons

--- a/app/views/users/_login_form.html.erb
+++ b/app/views/users/_login_form.html.erb
@@ -18,8 +18,11 @@
       </p>
     </div>
 
-    <%= f.submit 'Login' %>
-
+    <div class="form_item">
+      <p>
+        <%= f.submit 'Login' %>
+      </p>
+    </div>
   <% end %>
 
 </div>
