--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,7 +76,7 @@
     ========================================================================== */
 
  html {
-   background: url("wallup.jpg"); /*no-repeat center center fixed;*/
+   background: url("wallup.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -95,19 +95,22 @@
 /* ----------------------------------------------------------------- */
  .modal {
      display: none;
-     position: absolute;
+     position: relative;
      width: 40%;
      height: 40%;
      margin: 0 auto;
-     border-radius: 10px;
-     background-color: gray;
+     margin-top: -50px;
+     border-radius: 20px;
+     background-color: #273746;
      overflow: auto;
+     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
  }
 
  .user_form {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 20px;
    text-align: center;
+
  }
 
  .form_item {
@@ -139,6 +142,7 @@
      right: 0;
      -webkit-transition: all 200ms;
      transition: all 200ms;
+     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
  }
 
  button.hover {
