--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,37 +9,47 @@
         <%= f.text_field :first_name %>
       </p>
     </div>
+
     <div class="form_item">
       <p>
         <%= f.label :last_name, 'Last Name' %><br>
         <%= f.text_field :last_name %>
       </p>
     </div>
+
     <div class="form_item">
       <p>
         <%= f.label :email, 'Email' %><br>
         <%= f.email_field :email %>
       </p>
     </div>
+
     <div class="form_item">
       <p>
         <%= f.label :role %><br>
         <%= f.select :role, ['instructor', 'student']%>
       </p>
     </div>
+
     <div class="form_item">
       <p>
         <%= f.label :password, 'Password' %><br>
         <%= f.password_field :password %>
       </p>
+    </div>
+
     <div class="form_item">
       <p>
         <%= f.label :password_confirmation, 'Confirm Password' %><br>
         <%= f.password_field :password_confirmation %>
       </p>
     </div>
-
-    <%= f.submit %>
+    
+    <div class="form_item">
+      <p>
+        <%= f.submit %>
+      </p>
+    </div>
 
     <% end %>
 
