--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -86,6 +86,15 @@
  h1 {
    color: white;
    text-align: center;
+   font-size: 3em;
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   text-shadow: 2px 2px black;
+ }
+
+ h2 {
+   color: white;
+   font-size: 1em;
+   text-align: center;
    font-size: 2em;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
@@ -99,7 +108,7 @@
      width: 40%;
      height: 40%;
      margin: 0 auto;
-     margin-top: -50px;
+     margin-top: -170px;
      border-radius: 20px;
      background-color: #273746;
      overflow: auto;
@@ -108,7 +117,8 @@
 
  .user_form {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-   font-size: 20px;
+   font-size: 22px;
+   color: white;
    text-align: center;
 
  }
@@ -124,19 +134,19 @@
      display: block;
      border: none;
      outline: none;
-     width: 6em;
-     height: 2em;
+     width: 7em;
+     height: 3em;
      border-radius: 10px;
      line-height: 2;
      text-align: center;
-     font-size: 0.9em;
+     font-size: 1.5em;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      background-color: skyblue;
      color: black;
      position: relative;
      margin: auto;
      margin-bottom: 10px;
-     top: 7em;
+     top: 4em;
      bottom: 0;
      left: 0;
      right: 0;
