Changed landing page buttons to 'Sign In' and 'New User'

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
 
     <button class="signin">Sign In</button>
 
-    <button class="signup">Sign Up</button>
+    <button class="signup">New User</button>
 
     <div class="modal" id="sign_in">
       <%= render "login_form" %>
