Slight sizing changes

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="user_form">
 
-  <h2>Create Account</h2>
+  <h2>New User</h2>
 
   <%= form_for @user do |f| %>
     <div class="form_item">
