--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,7 +76,7 @@
     ========================================================================== */
 
  html {
-   background: url("wallup.jpg") no-repeat center center fixed;
+   /*background: url("wallup.jpg") no-repeat center center fixed;*/
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
