--- a/app/views/users/_login_form.html.erb
+++ b/app/views/users/_login_form.html.erb
@@ -4,6 +4,8 @@
 
   <%= form_for :session, url: sessions_path do |f| %>
 
+    <div class="close"><span id="x">X</span></div>
+
     <div class="form_item">
       <p>
         <%= f.label :email, 'Your Email' %><br>
