--- a/app/views/users/_login_form.html.erb
+++ b/app/views/users/_login_form.html.erb
@@ -4,7 +4,7 @@
 
   <%= form_for :session, url: sessions_path do |f| %>
 
-    <div class="close"><span id="close_x">X</span></div>
+    <div class="close_sign_in"><span id="close_x">X</span></div>
 
     <div class="form_item">
       <p>
