--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,7 @@
      background-color: gray;
      font-size: 1em;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+     display: inline;
  }
 
  a {
@@ -81,15 +82,6 @@
     Author's custom styles ---> START YOUR STYLING BELOW
     ========================================================================== */
 
-  footer {
-    margin: 0 auto;
-    color: white;
-    padding: 10px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-
  .welcome_page {
    background-image: url("wallup.jpg");
    background-size: cover;
@@ -107,6 +99,7 @@
   }
 
  h1 {
+   padding-top: 40px;
    color: white;
    text-align: center;
    font-size: 3em;
@@ -122,12 +115,9 @@
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
 
- /*.back_to_your_profile {
-   text-align: center;
-   font-size: 2em;
-   padding: 5px;
-   background-color: black;
- }*/
+ .back_to_your_profile {
+
+ }
 
 /* ----------------------------------------------------------------- */
 /* Login and Signup Forms */
@@ -217,18 +207,39 @@
      color: #666;
  }
 
- button.submit {
-     display: block;
-     border: none;
-     outline: none;
-     width: 100%;
-     padding: 0.5em;
-     font: 1.5em "Bebas Neue";
-     margin: 1em 0;
-     background-color: #bab500;
-     color: #fcf6ce;
- }
-
  .getstarted>input.error {
      outline: 2px solid #bc2a39;
+ }
+
+ /* ----------------------------------------------------------------- */
+ /* Nav Bar */
+ /* ----------------------------------------------------------------- */
+
+ .nav_main {
+   width: 100%;
+   color: white;
+   background-color: black;
+   opacity: 0.75;
+   position: fixed;
+   top: 0;
+
+ }
+
+ .nav_main a {
+   color: white;
+ }
+
+ .nav_to_profile {
+   float: left;
+   font-weight: bold;
+ }
+
+ .nav_to_logout {
+   float: right;
+ }
+
+ .nav_to_profile, .nav_to_logout {
+   position: relative;
+   padding: 20px;
+   font-size: 1em;
  }
