--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-info {
+  float: left;
+  height: 600px;
+}
+
+.user-nav {
+  float: right;
+  width: 738px;
+  height: 600px;
+  display: inline-grid;
+}
