--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,10 @@
      display: inline;
  }
 
+ .spacer {
+   padding-top: 100px;
+ }
+
  a {
    text-decoration: none;
  }
@@ -99,7 +103,6 @@
   }
 
  h1 {
-   padding-top: 60px;
    color: white;
    text-align: center;
    font-size: 3em;
@@ -128,7 +131,7 @@
      width: 40%;
      height: 40%;
      margin: 0 auto;
-     margin-top: -170px;
+     margin-top: -300px;
      border-radius: 20px;
      background-color: #273746;
      overflow: auto;
