--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
       <div class="user-info">
         <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
-        <h3>Email: <%= @user.email %></h3>
+        <h3>Email: <%= mail_to @user.email, "#{ @user.email }" %></h3>
         <h3>Role: <%= @user.role %></h3>
         <h3><%= link_to 'Edit', edit_user_path %></h3>
         <h3><%= link_to 'Delete', user_path, method: :delete %></h3>
@@ -19,7 +19,7 @@
 
       <div class="user-info">
         <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
-        <h3>Email: <%= @user.email %></h3>
+        <h3>Email: <%= mail_to @user.email, "#{ @user.email }" %></h3>
         <h3>Role: <%= @user.role %></h3>
         <h3><%= link_to 'Edit', edit_user_path %></h3>
         <h3><%= link_to 'Delete', user_path, method: :delete %></h3>
