--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="user-nav">
-        <%= link_to 'Show all class room', user_class_rooms_path(@user.id) %>
+        <%= link_to 'Show all classrooms', user_class_rooms_path(@user.id) %>
       </div>
 
     <% elsif @user.role == 'instructor' %>
@@ -21,13 +21,13 @@
         <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
         <h3>Email: <%= mail_to @user.email, "#{ @user.email }" %></h3>
         <h3>Role: <%= @user.role %></h3>
-        <h3><%= link_to 'Edit', edit_user_path %></h3>
-        <h3><%= link_to 'Delete', user_path, method: :delete %></h3>
+        <h3><%= link_to 'Edit Profile', edit_user_path %></h3>
+        <h3><%= link_to 'Delete Your Account', user_path, method: :delete %></h3>
       </div>
 
       <div class="user-nav">
-        <%= link_to 'Create Class Room', new_user_class_room_path(@user.id) %>
-        <%= link_to 'See All Class Rooms', user_class_rooms_path(@user.id) %>
+        <%= link_to 'Create a Classroom', new_user_class_room_path(@user.id) %>
+        <%= link_to 'See All Classrooms', user_class_rooms_path(@user.id) %>
       </div>
 
     <% end %>
