Comments our broken JS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <%# Main Nav Bar: %>
   <body>
     <% if current_user %>
+    <script>var userId = <%= current_user.id %></script>
       <div class="nav_main">
 
         <div class="nav_to_profile">
