--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,7 +5,7 @@
 .user-info {
   float: left;
   height: 600px;
-  padding: 20px;
+  margin-left: 20px;
 }
 
 .user-nav {
@@ -17,4 +17,13 @@
 
 h3 {
   font-weight: normal;
+}
+
+.profile_page_photo {
+  border: 1px solid black;
+  width: 300px;
+  height: 400px;
+  background-color: white;
+  margin-left: 20px;
+  text-align: center;
 }
