--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,20 @@
 
 <div id="user-profile">
 
+    <div class="profile_page_photo">
+      <p>
+        <br>USER<br>PROFILE<br>PHOTO<br>HERE<br>?
+      </p>
+    </div>
+
     <% if @user.role == 'student' %>
 
       <div class="user-info">
         <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
-        <h3>Email: <%= mail_to @user.email, "#{ @user.email }" %></h3>
+        <h3>Contact: <%= mail_to @user.email, "#{ @user.email }" %></h3>
         <h3>Role: <%= @user.role %></h3>
-        <h3><%= link_to 'Edit', edit_user_path %></h3>
-        <h3><%= link_to 'Delete', user_path, method: :delete %></h3>
+        <h3><%= link_to 'Edit Profile', edit_user_path %></h3>
+        <h3><%= link_to 'Delete Your Account', user_path, method: :delete %></h3>
       </div>
 
       <div class="user-nav">
@@ -19,7 +25,7 @@
 
       <div class="user-info">
         <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
-        <h3>Email: <%= mail_to @user.email, "#{ @user.email }" %></h3>
+        <h3>Contact: <%= mail_to @user.email, "#{ @user.email }" %></h3>
         <h3>Role: <%= @user.role %></h3>
         <h3><%= link_to 'Edit Profile', edit_user_path %></h3>
         <h3><%= link_to 'Delete Your Account', user_path, method: :delete %></h3>
