--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,6 +22,13 @@
 
     <div class="form_item">
       <p>
+        <%= f.label :user_image, 'Upload your picture' %><br>
+        <%= f.file_field :user_image, placeholder: "i.e. jpg" %>
+      </p>
+    </div>
+
+    <div class="form_item">
+      <p>
         <%= f.label :email, 'Email Address' %><br>
         <%= f.email_field :email, placeholder: "i.e. clarkkent@dailyplanet.com" %>
       </p>
