--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,33 +3,25 @@
 
     <div class="profile_page_photo">
       <p>
-        <br>USER<br>PROFILE<br>PHOTO<br>HERE<br>?
+        <%= image_tag(@user.user_image.url) %>
       </p>
     </div>
 
-    <% if @user.role == 'student' %>
+    <div class="user-info">
+      <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
+      <h3>Contact: <%= mail_to @user.email, "#{ @user.email }" %></h3>
+      <h3>Role: <%= @user.role %></h3>
+      <h3><%= link_to 'Edit Profile', edit_user_path %></h3>
+      <h3><%= link_to 'Delete Your Account', user_path, method: :delete %></h3>
+    </div>
 
-      <div class="user-info">
-        <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
-        <h3>Contact: <%= mail_to @user.email, "#{ @user.email }" %></h3>
-        <h3>Role: <%= @user.role %></h3>
-        <h3><%= link_to 'Edit Profile', edit_user_path %></h3>
-        <h3><%= link_to 'Delete Your Account', user_path, method: :delete %></h3>
-      </div>
+    <% if @user.role == 'student' %>
 
       <div class="user-nav">
         <%= link_to 'Show all classrooms', user_class_rooms_path(@user.id) %>
       </div>
 
     <% elsif @user.role == 'instructor' %>
-
-      <div class="user-info">
-        <h3>Name: <%= @user.first_name %> <%= @user.last_name %></h3>
-        <h3>Contact: <%= mail_to @user.email, "#{ @user.email }" %></h3>
-        <h3>Role: <%= @user.role %></h3>
-        <h3><%= link_to 'Edit Profile', edit_user_path %></h3>
-        <h3><%= link_to 'Delete Your Account', user_path, method: :delete %></h3>
-      </div>
 
       <div class="user-nav">
         <%= link_to 'Create a Classroom', new_user_class_room_path(@user.id) %>
