--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -4,7 +4,7 @@
 
   <%= form_for @user do |f| %>
 
-    <div class="close_sign_up"><span id="close_x">X</span></div>
+    <div class="close_edit"><span id="close_x">X</span></div>
 
     <div class="form_item">
       <p>
