--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -118,18 +118,14 @@
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
 
- .back_to_your_profile {
-
- }
-
 /* ----------------------------------------------------------------- */
-/* Login and Signup Forms */
+/* Modals/Forms for Login, Signup, Edit Profile */
 /* ----------------------------------------------------------------- */
  .modal {
      display: none;
      position: relative;
      width: 40%;
-     height: 40%;
+     height: auto;
      margin: 0 auto;
      margin-top: -300px;
      padding: 20px;
@@ -137,6 +133,15 @@
      background-color: #273746;
      overflow: auto;
      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.56), 0 17px 50px 0 rgba(0,0,0,0.42);
+     z-index: 100;
+ }
+
+ .user-profile {
+   position: relative;
+ }
+
+ .modal#edit_profile {
+   position: absolute;
  }
 
  .user_form {
