--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,7 +111,7 @@
  }
 
  h2 {
-   color: white;
+   color: black;
    text-align: center;
    font-size: 1.5em;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -129,15 +129,11 @@
      margin-top: -400px;
      padding: 20px;
      border-radius: 20px;
-     background-color: #273746;
+     color: black;
+     background-color: beige;
      overflow: auto;
      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.56), 0 17px 50px 0 rgba(0,0,0,0.42);
      z-index: 100;
- }
-
- .user-profile {
-   position: relative;
-   width: 100%;
  }
 
  .modal#edit_profile {
@@ -145,16 +141,20 @@
    margin-top: -440px;
  }
 
+ .user-profile {
+   position: relative;
+   width: 100%;
+ }
+
  .user_form {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 20px;
-   color: white;
+   color: black;
    text-align: center;
  }
 
  .form_item {
-   margin-top: 20px;
-   margin-bottom: 20px;
+   margin: 25px;
  }
 
  .close_sign_in, .close_sign_up, .close_edit {
