--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,28 +2,37 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#user-profile {
+  width: 100%;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 .user-info {
   float: left;
-  height: 600px;
-  margin-left: 20px;
+  width: 30%;
 }
 
 .user-nav {
-  float: right;
-  width: 738px;
-  height: 600px;
-  display: inline-grid;
+  float: left;
+  width: 30%;
+}
+
+.profile_page_photo {
+  width: 100%;
+  height: 100%;
+}
+
+h2 {
+  text-align: left;
 }
 
 h3 {
   font-weight: normal;
 }
 
-.profile_page_photo {
-  border: 1px solid black;
-  width: 300px;
-  height: 400px;
-  background-color: white;
-  margin-left: 20px;
-  text-align: center;
+
+
+img {
+  width: 100%;
 }
