--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,18 +4,20 @@
 
 #user-profile {
   width: 100%;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .user-info {
   float: left;
-  width: 30%;
+  width: 40%;
 }
 
 .user-nav {
   float: left;
-  width: 30%;
+  width: 40%;
+  padding-left: 20px;
+  margin-top: 0;
 }
 
 .profile_page_photo {
@@ -23,16 +25,29 @@
   height: 100%;
 }
 
-h2 {
-  text-align: left;
-}
-
 h3 {
   font-weight: normal;
 }
 
-
-
 img {
   width: 100%;
+}
+
+p {
+  font-size: 1.5em;
+  margin-top: 0;
+}
+
+.access {
+  width: auto;
+  padding-left: 24px;
+  padding-right: 24px;
+  font-size: 1.2em;
+  float: left;
+}
+
+#user_name {
+
+  font-size: 2em;
+  font-weight: bold;
 }
