--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,10 +22,10 @@
 
 
         <div class="edit_profile">
-          <p><%= link_to 'Edit Your Profile', '#' %></p>
+          <p><%= link_to 'Edit Profile', '#' %></p>
         </div>
 
-        <p><%= link_to 'Delete Your Account', user_path, method: :delete %></p>
+        <p><%= link_to 'Delete Account', user_path, method: :delete %></p>
 
         <% if @user.role == 'student' %>
           <p>
