--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,13 +137,21 @@
    transform: translate(-50%, -50%);
  }
 
- .modal p {
-   font-size: 1em;
- }
-
  .modal#edit_profile {
    margin-top: 0;
    transform: translate(-50%, -10%);
+ }
+
+ .modal#sign_in {
+   margin-top: 0;
+ }
+
+ .modal#sign_up {
+   margin-top: 0;
+ }
+
+ .modal p {
+   font-size: 1em;
  }
 
  .password_required {
@@ -198,12 +206,12 @@
      display: block;
      border: none;
      outline: none;
-     width: 8em;
-     height: 3em;
+     width: 7em;
+     height: 2.5em;
      border-radius: 10px;
      line-height: 2;
      text-align: center;
-     font-size: 1.5em;
+     font-size: 1.2em;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      background-color: skyblue;
      color: black;
@@ -222,10 +230,6 @@
  button.hover {
      background-color: gray;
      color: #666;
- }
-
- .getstarted>input.error {
-     outline: 2px solid #bc2a39;
  }
 
  /* ----------------------------------------------------------------- */
