--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,38 +15,37 @@
     <div class="user-nav">
 
       <div id="user_name">
-        <p><%= @user.first_name %> <%= @user.last_name %></p>
+        <p>
+          <%= @user.first_name %> <%= @user.last_name %>
+        </p>
+      </div>
+      <p>Role: <%= @user.role %></p>
+      <p>Email: <%= mail_to @user.email, "#{ @user.email }" %></p>
+
+      <div class="edit_profile">
+        <p><%= link_to 'Edit Profile', '#' %></p>
       </div>
 
-        <p>Role: <%= @user.role %></p>
+      <p><%= link_to 'Delete Account', user_path, method: :delete %></p>
 
-        <p>Email: <%= mail_to @user.email, "#{ @user.email }" %></p>
-
-
-        <div class="edit_profile">
-          <p><%= link_to 'Edit Profile', '#' %></p>
-        </div>
-
-        <p><%= link_to 'Delete Account', user_path, method: :delete %></p>
-
-        <% if @user.role == 'student' %>
-          <p>
-            <button class="access">
-              <%= link_to 'Show All Classrooms', user_class_rooms_path(@user.id) %>
-            </button>
-          </p>
-        <% elsif @user.role == 'instructor' %>
-          <p>
-            <button class="access">
-              <%= link_to 'Create a Classroom', new_user_class_room_path(@user.id) %>
-            </button>
-          </p>
-          <p>
-            <button class="access">
-              <%= link_to 'See All Classrooms', user_class_rooms_path(@user.id) %>
-            </button>
-          </p>
-        <% end %>
+      <% if @user.role == 'student' %>
+        <p>
+          <button class="access">
+            <%= link_to 'Show All Classrooms', user_class_rooms_path(@user.id) %>
+          </button>
+        </p>
+      <% elsif @user.role == 'instructor' %>
+        <p>
+          <button class="access">
+            <%= link_to 'Create a Classroom', new_user_class_room_path(@user.id) %>
+          </button>
+        </p>
+        <p>
+          <button class="access">
+            <%= link_to 'See All Classrooms', user_class_rooms_path(@user.id) %>
+          </button>
+        </p>
+      <% end %>
 
     </div>
 
