--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -128,6 +128,7 @@
 /* ----------------------------------------------------------------- */
  .modal {
    display: none;
+   border: 1px solid black;
    z-index: 100;
    position: absolute;
    width: 33%;
