back to posting comments without refresh

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
 
   </head>
 
-  <%# Main Nav Bar: %>
-  <body>
+
+  <body id="check_this">
+
     <% if current_user %>
+
     <script>var userId = <%= current_user.id %></script>
       <div class="nav_main">
 
